@@ -117,6 +117,18 @@ typedef struct _GString GString;
 #define	G_USEC_PER_SEC	1000000
 #define G_LITTLE_ENDIAN 1234
 #define G_BIG_ENDIAN    4321
+
+#define G_DIR_SEPARATOR '/'
+#ifdef	MAXPATHLEN
+#define	G_PATH_LENGTH	MAXPATHLEN
+#elif	defined (PATH_MAX)
+#define	G_PATH_LENGTH	PATH_MAX
+#elif   defined (_PC_PATH_MAX)
+#define	G_PATH_LENGTH	sysconf(_PC_PATH_MAX)
+#else	
+#define G_PATH_LENGTH   2048
+#endif
+
 #define G_STRINGIFY(macro_or_string)    G_STRINGIFY_ARG (macro_or_string)
 #define G_STRINGIFY_ARG(contents)       #contents
 #if  defined __GNUC__ && !defined __cplusplus
@@ -391,7 +403,10 @@ typedef struct { int fd; short events, revents; } GPollFD;
 #define g_strtod		gsl_g_strtod
 #define g_stpcpy		gsl_g_stpcpy
 #define	g_strescape		gsl_g_strescape
+#define g_get_current_dir       gsl_g_get_current_dir
+#define g_path_is_absolute      gsl_g_path_is_absolute
 #define g_printf_string_upper_bound gsl_g_printf_string_upper_bound
+
 gpointer g_malloc         (gulong        n_bytes);
 gpointer g_malloc0        (gulong        n_bytes);
 gpointer g_realloc        (gpointer      mem,
@@ -427,6 +442,8 @@ gdouble	g_strtod (const gchar *nptr, 	  gchar **endptr);
 gsize g_printf_string_upper_bound (const gchar *format,  va_list      args);
 gchar * g_stpcpy (gchar       *dest, 	  const gchar *src);
 gchar * g_strescape (const gchar *source, const gchar *exceptions);
+gchar * g_get_current_dir (void);
+gboolean g_path_is_absolute (const gchar *file_name);
 
 
 
